--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -133,8 +133,28 @@
     "        \n",
     "        return waveform, torch.tensor(phn_list)\n",
     "\n",
-    "\n",
-    "\n",
+    "train_ds = TimitDataset(train_json,vocab_file)\n",
+    "test_ds = TimitDataset(test_json,vocab_file)\n",
+    "valid_ds = TimitDataset(valid_json,vocab_file)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b50dfd2",
+   "metadata": {},
+   "source": [
+    "### DataLoader\n",
+    "Me convierte los datos recibidos del Dataset en minibatches de igual longitud usando la función `fn_collate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "284bc7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def collate_fn(batch):\n",
     "    # El batch es una lista de tuplas: [(dato1,label1), (dato2,label2),...]\n",
     "    sequences, labels = zip(*batch) # Esto devuelve: \n",
@@ -151,9 +171,7 @@
     "    padded_phn = pad_sequence(labels, batch_first=True, padding_value= -1)\n",
     "    return (padded_wav, wav_length), (padded_phn, phn_length) # Esta es la salida del dataloader\n",
     "\n",
-    "train_ds = TimitDataset(train_json,vocab_file)\n",
-    "test_ds = TimitDataset(test_json,vocab_file)\n",
-    "valid_ds = TimitDataset(valid_json,vocab_file)\n",
+    "\n",
     "\n",
     "train_dl = DataLoader(train_ds, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
     "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
@@ -171,16 +189,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e07da27",
+   "cell_type": "markdown",
+   "id": "ad20ccdb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Parámetros\n",
-    "par = {'sample_rate': 16000, 'n_fft': 400, 'n_mels': 40, 'lr': 0.1, 'dropout': 0.15, 'cnn_channels': (128,256),\n",
-    "        'cnn_kernelsize': (3,3), 'rnn_layers': 4, 'rnn_neurons': 512, 'dnn_blocks':2, 'dnn_neurons':512}\n",
-    "        "
+    "### Bloques auxiliares\n",
+    "  - `Transpose`: Implementa la traspuesta en forma de módulo para poder usarla en `Sequential`\n",
+    "  - `CNN_block`: Implementa un bloque que realiza:\n",
+    "    - convo1d\n",
+    "    - layer normalization\n",
+    "    - Leaky Relu\n",
+    "    - Pooling\n",
+    "    - drop-out "
    ]
   },
   {
@@ -190,9 +210,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bloque cnn similar al de speechbrain: \n",
-    "# conv1d-->layer normalization-->Leaky Relu-->Pooling-->drop-out\n",
-    "# Modulo transpose para usarlo como una capa cualquiera\n",
     "class Transpose(nn.Module):\n",
     "    def __init__(self, dim0: int, dim1: int):\n",
     "        super().__init__()\n",
@@ -203,12 +220,12 @@
     "        return x.transpose(self.dim0, self.dim1)\n",
     "    \n",
     "class CNN_block(nn.Module):\n",
-    "    def __init__(self, n_mels: int, n_out: int, kernel_size: int, \n",
+    "    def __init__(self, n_in: int, n_out: int, kernel_size: int, \n",
     "                    pool_kernel_size: int, do_prob: float = 0.0):\n",
     "        super().__init__()\n",
     "        pad_amount = (kernel_size - 1) // 2\n",
     "        layers = []\n",
-    "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_out, kernel_size=kernel_size, stride=1, \n",
+    "        layers.append( nn.Conv1d(in_channels=n_in, out_channels=n_out, kernel_size=kernel_size, stride=1, \n",
     "                      padding=pad_amount, padding_mode= \"replicate\") )\n",
     "        layers.append(Transpose(1,2))\n",
     "        layers.append(nn.LayerNorm(n_out))\n",
@@ -237,43 +254,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24a1c3c4",
+   "metadata": {},
+   "source": [
+    "### Modelo: `Model_CNN_RNN_DNN`\n",
+    "Modelo que implementa varios bloques de convolución, recurrencia y feed-forward"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7168699a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definición del modelo\n",
-    "# input_size: n_mels\n",
-    "# dropout: !ref <dropout>\n",
-    "cnn_blocks: !ref <cnn_blocks>\n",
-    "cnn_channels: !ref <cnn_channels>\n",
-    "cnn_kernelsize: !ref <cnn_kernelsize>\n",
-    "rnn_layers: !ref <rnn_layers>\n",
-    "rnn_neurons: !ref <rnn_neurons>\n",
-    "dnn_blocks: !ref <dnn_blocks>\n",
-    "dnn_neurons: !ref <dnn_neurons>\n",
-    "dropout: 0.15\n",
-    "cnn_blocks: 2\n",
-    "cnn_channels: (128, 256)\n",
-    "cnn_kernelsize: (3, 3)\n",
-    "rnn_layers: 4\n",
-    "rnn_neurons: 512\n",
-    "rnn_bidirectional: True\n",
-    "dnn_blocks: 2\n",
-    "dnn_neurons: 512\n",
     "class Model_CNN_RNN_DNN(nn.Module):\n",
-    "    def __init__(self, n_mels, n_out_list, kernel_sizes, pool_kernel_sizes, do_probs):\n",
+    "    def __init__(self, drop_out, n_mels, cnn_blocks, cnn_channels, cnn_kernel_size,\n",
+    "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons):\n",
     "        super().__init__()\n",
     "        in_0 = n_mels\n",
     "        self.cnn_bloques = nn.ModuleDict()\n",
-    "        # Bloques CNN_block. Se implementan con CNN_block\n",
-    "        for i, (n_out, k_size, p_k_size, d_prob) in enumerate(zip(n_out_list, kernel_sizes, \n",
-    "                                                                 pool_kernel_sizes, do_probs)):\n",
-    "            self.cnn_bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_mels=in_0,n_out=n_out, \n",
-    "                                                        kernel_size=k_size,pool_kernel_size=p_k_size, \n",
-    "                                                        do_prob=d_prob)\n",
-    "            in_0 = n_out # Output channels of this block become input for next\n",
+    "        # Bloques CNN_block. Se implementan con CNN_block        \n",
+    "        n_in = n_mels\n",
+    "        for i in range(cnn_blocks):\n",
+    "            n_out = cnn_channels[i]\n",
+    "            self.cnn_bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_in=n_in, n_out=n_out, \n",
+    "                                                        kernel_size=cnn_kernel_size[i], \n",
+    "                                                        do_prob=drop_out)\n",
+    "            n_in = n_out # El siguiente bloque recibe la salida del anterior\n",
     "        \n",
     "        # Bloques RNN. Se implementan con GRU\n",
     "        self.n_rnn_layers = n_rnn_layers\n",
@@ -327,33 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "28f79424",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CNN_block(\n",
-       "  (bloque_cnn): Sequential(\n",
-       "    (0): Conv1d(80, 64, kernel_size=(3,), stride=(1,), padding=(1,), padding_mode=replicate)\n",
-       "    (1): Transpose()\n",
-       "    (2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
-       "    (3): Transpose()\n",
-       "    (4): LeakyReLU(negative_slope=0.01)\n",
-       "    (5): MaxPool1d(kernel_size=2, stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (6): Dropout(p=0.1, inplace=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_manual.bloques[\"cnn_block_1\"]"
+    "# Parámetros\n",
+    "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
+    "        'droput': 0.15,\n",
+    "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
+    "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
+    "        'dnn_blocks':2, 'dnn_neurons':512\n",
+    "}\n",
+    "        "
    ]
   }
  ],
@@ -373,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
