agregado de bloques al modelo

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "284bc7b2",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
@@ -285,30 +285,43 @@
     "            n_in = n_out # El siguiente bloque recibe la salida del anterior\n",
     "        \n",
     "        # Bloques RNN. Se implementan con GRU\n",
-    "        self.n_rnn_layers = n_rnn_layers\n",
-    "        self.rnn_bloques = nn.ModuleList()\n",
-    "        current_rnn_input_size = rnn_input_size\n",
+    "        self.rnn_blocks = rnn_blocks\n",
+    "        self.rnn_bloques = nn.ModuleDict()\n",
+    "        n_in = n_out # El primer bloque recibe la salida del último bloque CNN\n",
+    "        for i in range(rnn_blocks):\n",
+    "            self.rnn_bloques[f\"rnn_block_{i+1}\"] = nn.GRU(input_size=n_in, hidden_size=rnn_neurons,\n",
+    "                num_layers=1, batch_first=True, bidirectional=True, \n",
+    "                dropout=drop_out if i < rnn_blocks - 1 else 0)\n",
+    "            n_in = rnn_neurons*2\n",
     "        \n",
-    "        for i in range(n_rnn_layers):\n",
-    "            rnn_modules.append(\n",
-    "                nn.GRU(\n",
-    "                    input_size=current_rnn_input_size,\n",
-    "                    hidden_size=rnn_hidden_size,\n",
-    "                    num_layers=1, # Cada GRU en la lista es una sola capa\n",
-    "                    batch_first=True,\n",
-    "                    bidirectional=rnn_bidirectional,\n",
-    "                    dropout=rnn_dropout if i < n_rnn_layers - 1 else 0 \n",
-    "                )\n",
-    "            )\n",
-    "            current_rnn_input_size = rnn_hidden_size * 2 if rnn_bidirectional else rnn_hidden_size\n",
-    "        self.rnn_blocks = rnn_modules\n",
+    "        # Bloques DNN. Se implementan con DNN_block\n",
+    "        self.dnn_bloques = nn.ModuleDict()\n",
+    "        n_in = rnn_neurons * 2 # El primer bloque recibe la salida del último bloque RNN\n",
+    "        for i in range(dnn_blocks):\n",
+    "            n_out = dnn_neurons\n",
+    "            self.dnn_bloques[f\"dnn_block_{i+1}\"] = nn.Sequential(nn.Linear(n_in, n_out),\n",
+    "                nn.LayerNorm(n_out), nn.LeakyReLU(),nn.Dropout(p=drop_out))\n",
+    "            n_in = n_out\n",
     "\n",
     "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
-    "        all_lengths = [lengths] # Keep track of lengths after each block\n",
+    "        \n",
+    "        for i in self.cnn_bloques:\n",
+    "            au = self.cnn_bloques[f\"cnn_block_{i+1}\"]\n",
+    "            x, lengths = au(x, lengths)\n",
+    "        x = x.permute(0, 2, 1).contiguous() \n",
+    "        packed_x = pack_padded_sequence(x, lengths.cpu(), batch_first=True, enforce_sorted=False)\n",
+    "        for i in self.rnn_bloques:\n",
+    "            au = self.rnn_bloques[f\"rnn_block_{i+1}\"]\n",
+    "            packed_x, _ = au(packed_x)\n",
+    "        x, _ = pad_packed_sequence(packed_c, batch_first=True)\n",
+    "        for i in self.dnn_bloques:\n",
+    "            au = self.dnn_bloques[f\"dnn_block_{i+1}\"]\n",
+    "            x = au(x)\n",
     "\n",
-    "        for block in self.bloques:\n",
-    "            x, lengths = self.bloques[block](x, lengths) # Pass both x and lengths, get both back\n",
-    "            all_lengths.append(lengths) # Store intermediate lengths if needed\n",
+    "        return x, lenghts\n",
+    "\n",
+    "\n",
+    "    \n",
     "        \n",
     "\n",
     "        return x, all_lengths\n",
