detalles del modelo

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
     "import torchaudio\n",
     "import torch.nn as nn\n",
     "import torchaudio.transforms as F\n",
-    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.nn.utils.rnn import pad_sequence, pack_padded_sequence, pad_packed_sequence\n",
     "from collections import OrderedDict\n",
     "from torch.utils.data import  Dataset, DataLoader\n",
     "from torchaudio.models.decoder import ctc_decoder # vamos a hacer un decoder greedy, por razones \n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "284bc7b2",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
     "    \n",
     "class CNN_block(nn.Module):\n",
     "    def __init__(self, n_in: int, n_out: int, kernel_size: int, \n",
-    "                    pool_kernel_size: int, do_prob: float = 0.0):\n",
+    "                    pool_kernel_size: int = 1, do_prob: float = 0.0):\n",
     "        super().__init__()\n",
     "        pad_amount = (kernel_size - 1) // 2\n",
     "        layers = []\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7168699a",
    "metadata": {},
    "outputs": [],
@@ -275,9 +275,11 @@
     "        super().__init__()\n",
     "        in_0 = n_mels\n",
     "        self.cnn_bloques = nn.ModuleDict()\n",
+    "        self.cnn_blocks = cnn_blocks\n",
+    "        self.dnn_blocks = dnn_blocks\n",
     "        # Bloques CNN_block. Se implementan con CNN_block        \n",
     "        n_in = n_mels\n",
-    "        for i in range(cnn_blocks):\n",
+    "        for i in range(self.cnn_blocks):\n",
     "            n_out = cnn_channels[i]\n",
     "            self.cnn_bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_in=n_in, n_out=n_out, \n",
     "                                                        kernel_size=cnn_kernel_size[i], \n",
@@ -291,7 +293,7 @@
     "        for i in range(rnn_blocks):\n",
     "            self.rnn_bloques[f\"rnn_block_{i+1}\"] = nn.GRU(input_size=n_in, hidden_size=rnn_neurons,\n",
     "                num_layers=1, batch_first=True, bidirectional=True, \n",
-    "                dropout=drop_out if i < rnn_blocks - 1 else 0)\n",
+    "                dropout=0)\n",
     "            n_in = rnn_neurons*2\n",
     "        \n",
     "        # Bloques DNN. Se implementan con DNN_block\n",
@@ -305,43 +307,44 @@
     "\n",
     "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
     "        \n",
-    "        for i in self.cnn_bloques:\n",
+    "        for i in range(cnn_blocks):\n",
     "            au = self.cnn_bloques[f\"cnn_block_{i+1}\"]\n",
     "            x, lengths = au(x, lengths)\n",
     "        x = x.permute(0, 2, 1).contiguous() \n",
     "        packed_x = pack_padded_sequence(x, lengths.cpu(), batch_first=True, enforce_sorted=False)\n",
-    "        for i in self.rnn_bloques:\n",
+    "        for i in range(self.rnn_blocks):\n",
     "            au = self.rnn_bloques[f\"rnn_block_{i+1}\"]\n",
     "            packed_x, _ = au(packed_x)\n",
-    "        x, _ = pad_packed_sequence(packed_c, batch_first=True)\n",
-    "        for i in self.dnn_bloques:\n",
+    "        x, _ = pad_packed_sequence(packed_x, batch_first=True)\n",
+    "        for i in range(self.dnn_blocks):\n",
     "            au = self.dnn_bloques[f\"dnn_block_{i+1}\"]\n",
     "            x = au(x)\n",
     "\n",
-    "        return x, lenghts\n",
+    "        return x, lengths\n",
     "\n",
     "\n",
     "    \n",
     "        \n",
     "\n",
     "        return x, all_lengths\n",
+    "\n",
+    "drop_out = 0.15\n",
+    "cnn_blocks = 2\n",
+    "cnn_channels = (128, 256)\n",
+    "cnn_kernel_size = (3, 3)\n",
+    "rnn_blocks = 4\n",
+    "rnn_neurons = 512\n",
+    "dnn_blocks = 2\n",
+    "dnn_neurons = 512\n",
+    "batch_size = 4\n",
+    "n_mels = 40\n",
+    "\n",
+    "\n",
+    "model_manual = Model_CNN_RNN_DNN(drop_out, n_mels, cnn_blocks, cnn_channels, cnn_kernel_size,\n",
+    "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons)\n",
     "    \n",
-    "n_mels = 80\n",
-    "num_blocks = 3\n",
-    "n_channels_per_block = [64, 128, 256]\n",
-    "kernel_sizes_per_block = [3, 5, 3] # Must be odd\n",
-    "pool_kernel_sizes_per_block = [2, 2, 2] # Stride 1 for pooling, so length reduces by (kernel-1)\n",
-    "do_probs_per_block = [0.1, 0.2, 0.0]   \n",
     "\n",
-    "model_manual = Model_CNN_RNN_DNN(\n",
-    "    n_mels=n_mels,\n",
-    "    n_out_list=n_channels_per_block,\n",
-    "    kernel_sizes=kernel_sizes_per_block,\n",
-    "    pool_kernel_sizes=pool_kernel_sizes_per_block,\n",
-    "    do_probs=do_probs_per_block\n",
-    ")     \n",
-    "\n",
-    "input_tensor = torch.randn(4, n_mels, 100)\n",
+    "input_tensor = torch.randn(batch_size, n_mels, 100)\n",
     "input_lengths = torch.tensor([100, 90, 80, 70], dtype=torch.long)\n",
     "\n",
     "x, x_len = model_manual(input_tensor, input_lengths)"
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "28f79424",
    "metadata": {},
    "outputs": [],
@@ -381,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
