--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1514,6 +1514,24 @@
     "    except Exception as e:\n",
     "        print(f\"\\nOcurrió un error durante la ejecución del ejemplo del modelo: {e}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6a067e5",
+   "metadata": {},
+   "source": [
+    "#### Iteraciones con tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "730ab80f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n"
+   ]
   }
  ],
  "metadata": {
