terminamos modelo y empezamos fit

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1530,7 +1530,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tqdm\n"
+    "import tqdm\n",
+    "i = 0\n",
+    "for batch in tqdm.tqdm(train_dl,colour=\"yellow\",desc='entrenando'):\n",
+    "    i += 1"
    ]
   }
  ],
