--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -69,6 +69,14 @@
     "train_json = 'data/train.json'\n",
     "test_json = 'data/test.json'\n",
     "valid_json = 'data/dev.json'\n",
+    "# Parámetros\n",
+    "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
+    "        'dropout': 0.15,\n",
+    "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
+    "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
+    "        'dnn_blocks':2, 'dnn_neurons':512,\n",
+    "        'output_neurons':40\n",
+    "}\n",
     "\n",
     "def load_phoneme_vocabulary(filepath: str) -> tuple[dict, dict]:\n",
     "    \"\"\"\n",
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "284bc7b2",
    "metadata": {},
    "outputs": [],
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
@@ -259,20 +267,20 @@
    "id": "24a1c3c4",
    "metadata": {},
    "source": [
-    "### Modelo: `Model_CNN_RNN_DNN`\n",
-    "Modelo que implementa varios bloques de convolución, recurrencia y feed-forward"
+    "### Modelo: `Model_CNN_RNN_DNN_PHN`\n",
+    "Modelo que implementa varios bloques de convolución, recurrencia y feed-forward, además transforma el espacio de logits en probabilidad de fonemas.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "7168699a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Model_CNN_RNN_DNN(nn.Module):\n",
     "    def __init__(self, drop_out, n_mels, cnn_blocks, cnn_channels, cnn_kernel_size,\n",
-    "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons):\n",
+    "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons,out_neurons):\n",
     "        super().__init__()\n",
     "        in_0 = n_mels\n",
     "        self.cnn_bloques = nn.ModuleDict()\n",
@@ -320,56 +328,51 @@
     "        for i in range(self.dnn_blocks):\n",
     "            au = self.dnn_bloques[f\"dnn_block_{i+1}\"]\n",
     "            x = au(x)\n",
-    "\n",
+    "        logit = nn.Linear(self.dnn_neurons, )\n",
     "        return x, lengths\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7dce2338",
+   "metadata": {},
+   "source": [
+    "### Modelo completo\n",
+    "completamos el modelo CNN_RNN_DNN con la capa de logit a probabilidades"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "28f79424",
+   "execution_count": 26,
+   "id": "4d3602b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output shape: torch.Size([4, 100, 512])\n",
-      "Output lengths: tensor([100,  90,  80,  70])\n"
+      "Cantidad de parámetros del modelo: 17464488\n"
      ]
     }
    ],
    "source": [
-    "# Parámetros\n",
-    "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
-    "        'droput': 0.15,\n",
-    "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
-    "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
-    "        'dnn_blocks':2, 'dnn_neurons':512\n",
-    "}\n",
-    "drop_out = 0.15\n",
-    "cnn_blocks = 2\n",
-    "cnn_channels = (128, 256)\n",
-    "cnn_kernel_size = (3, 3)\n",
-    "rnn_blocks = 4\n",
-    "rnn_neurons = 512\n",
-    "dnn_blocks = 2\n",
-    "dnn_neurons = 512\n",
-    "batch_size = 4\n",
-    "n_mels = 40\n",
-    "\n",
-    "\n",
-    "model_manual = Model_CNN_RNN_DNN(drop_out, n_mels, cnn_blocks, cnn_channels, cnn_kernel_size,\n",
-    "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons)\n",
-    "    \n",
-    "\n",
-    "input_tensor = torch.randn(batch_size, n_mels, 100)\n",
-    "input_lengths = torch.tensor([100, 90, 80, 70], dtype=torch.long)\n",
-    "\n",
-    "x, x_len = model_manual(input_tensor, input_lengths)\n",
-    "print(\"Output shape:\", x.shape)\n",
-    "print(\"Output lengths:\", x_len)"
+    "modelo = nn.ModuleDict()\n",
+    "modelo['cnn_rnn_dnn'] = Model_CNN_RNN_DNN(\n",
+    "    drop_out=par['dropout'],\n",
+    "    n_mels=par['n_mels'],\n",
+    "    cnn_blocks=par['cnn_blocks'],\n",
+    "    cnn_channels=par['cnn_channels'],\n",
+    "    cnn_kernel_size=par['cnn_kernelsize'],\n",
+    "    rnn_blocks=par['rnn_blocks'] ,\n",
+    "    rnn_neurons=par['rnn_neurons'],\n",
+    "    dnn_blocks=par['dnn_blocks'],\n",
+    "    dnn_neurons=par['dnn_neurons'],\n",
+    "    out_neurons=par['output_neurons']\n",
+    ")   \n",
+    "modelo['logits'] = nn.Linear(par['dnn_neurons'], par['output_neurons'])\n",
+    "modelo['logsoftmax'] = nn.LogSoftmax(dim=-1)    \n",
+    "print(f'Cantidad de parámetros del modelo: {sum(p.numel() for p in modelo.parameters() if p.requires_grad)}')\n"
    ]
   },
   {
@@ -382,22 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "586c1689",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "entrenando: 100%|\u001b[33m██████████\u001b[0m| 462/462 [00:00<00:00, 555.24it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "i = 0\n",
-    "for batch in tqdm.tqdm(train_dl,colour=\"yellow\",desc='entrenando'):\n",
-    "    i += 1"
+    "class ASR(nn.Module):\n",
+    "    def __init__(self, modelo, params, opt_class):\n",
+    "        super().__init__()\n",
+    "        modelo.to(device)\n",
+    "        # Prepare iterating variables\n",
+    "        self.avg_train_loss = 0.0\n",
+    "        self.step = 0\n",
+    "        self.optimizer_step = 0\n",
+    "\n",
+    "    # Train y valid\n",
+    "    def fit(self, train_set, valid_set, n_epochs):\n",
+    "        seguir en el fit de core\n",
+    "\n",
+    "        "
    ]
   }
  ],
