--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -391,17 +391,58 @@
    "outputs": [],
    "source": [
     "class ASR(nn.Module):\n",
-    "    def __init__(self, modelo, params, opt_class):\n",
+    "    def __init__(self, modelo, params):\n",
     "        super().__init__()\n",
-    "        modelo.to(device)\n",
+    "        self.modelo = modelo.to(device)\n",
+    "        self.params = params\n",
     "        # Prepare iterating variables\n",
     "        self.avg_train_loss = 0.0\n",
     "        self.step = 0\n",
     "        self.optimizer_step = 0\n",
     "\n",
+    "    def update_average(self, loss, avg_loss):\n",
+    "        \"\"\"Update running average of the loss.\n",
+    "\n",
+    "        Arguments\n",
+    "        ---------\n",
+    "        loss : torch.tensor\n",
+    "            detached loss, a single float value.\n",
+    "        avg_loss : float\n",
+    "            current running average.\n",
+    "        Lo que hace es: \n",
+    "        alfa = sum(x)\n",
+    "        avg_old = alfa/(N-1)\n",
+    "        avg_new = (alfa + xi)/N\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        avg_loss : float\n",
+    "            The average loss.\n",
+    "        \"\"\"\n",
+    "        if torch.isfinite(loss):    \n",
+    "            avg_loss -= avg_loss / self.step\n",
+    "            avg_loss += float(loss) / self.step\n",
+    "        return avg_loss\n",
+    "\n",
+    "\n",
     "    # Train y valid\n",
     "    def fit(self, train_set, valid_set, n_epochs):\n",
-    "        seguir en el fit de core\n",
+    "        optimizer = torch.optim.Adadelta(rho=0.95,lr = params['lr'],eps=1.e-8)\n",
+    "        train_loss = list()\n",
+    "        for i in range(1, n_epochs+1):\n",
+    "            avg_train_loss = 0.0\n",
+    "            # fit de train\n",
+    "            self.ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
+    "                    blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
+    "            self.modelo.train()\n",
+    "            optimizer.zero_grad()\n",
+    "            with tqdm(train_dl,colour=\"yellow\",desc='entrenando') as t:\n",
+    "                for batch in t:\n",
+    "                    loss = self.fit_batch(batch) # <----- implementar esto\n",
+    "                    avg_train_loss = self.update_average(loss, avg_train_loss)\n",
+    "            train_loss.append((i,avg_train_loss))\n",
+    "            \n",
+    "\n",
     "\n",
     "        "
    ]
