--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "284bc7b2",
    "metadata": {},
    "outputs": [],
@@ -273,12 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7168699a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Model_CNN_RNN_DNN(nn.Module):\n",
+    "class Model_CNN_RNN_DNN_PHN(nn.Module):\n",
     "    def __init__(self, drop_out, n_mels, cnn_blocks, cnn_channels, cnn_kernel_size,\n",
     "                 rnn_blocks, rnn_neurons, dnn_blocks, dnn_neurons,out_neurons):\n",
     "        super().__init__()\n",
@@ -286,6 +286,7 @@
     "        self.cnn_bloques = nn.ModuleDict()\n",
     "        self.cnn_blocks = cnn_blocks\n",
     "        self.dnn_blocks = dnn_blocks\n",
+    "        self.out_neurons = out_neurons\n",
     "        # Bloques CNN_block. Se implementan con CNN_block        \n",
     "        n_in = n_mels\n",
     "        for i in range(self.cnn_blocks):\n",
@@ -315,8 +316,7 @@
     "            n_in = n_out\n",
     "\n",
     "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
-    "        \n",
-    "        for i in range(cnn_blocks):\n",
+    "        for i in range(self.cnn_blocks):\n",
     "            au = self.cnn_bloques[f\"cnn_block_{i+1}\"]\n",
     "            x, lengths = au(x, lengths)\n",
     "        x = x.permute(0, 2, 1).contiguous() \n",
@@ -328,51 +328,12 @@
     "        for i in range(self.dnn_blocks):\n",
     "            au = self.dnn_bloques[f\"dnn_block_{i+1}\"]\n",
     "            x = au(x)\n",
-    "        logit = nn.Linear(self.dnn_neurons, )\n",
+    "        logit = nn.Linear(self.dnn_neurons,self.out_neurons)\n",
+    "        x = logit(x)\n",
+    "        logsoftmax = nn.LogSoftmax(dim=-1)\n",
+    "        x = logsoftmax(x)\n",
     "        return x, lengths\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7dce2338",
-   "metadata": {},
-   "source": [
-    "### Modelo completo\n",
-    "completamos el modelo CNN_RNN_DNN con la capa de logit a probabilidades"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "4d3602b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cantidad de parámetros del modelo: 17464488\n"
-     ]
-    }
-   ],
-   "source": [
-    "modelo = nn.ModuleDict()\n",
-    "modelo['cnn_rnn_dnn'] = Model_CNN_RNN_DNN(\n",
-    "    drop_out=par['dropout'],\n",
-    "    n_mels=par['n_mels'],\n",
-    "    cnn_blocks=par['cnn_blocks'],\n",
-    "    cnn_channels=par['cnn_channels'],\n",
-    "    cnn_kernel_size=par['cnn_kernelsize'],\n",
-    "    rnn_blocks=par['rnn_blocks'] ,\n",
-    "    rnn_neurons=par['rnn_neurons'],\n",
-    "    dnn_blocks=par['dnn_blocks'],\n",
-    "    dnn_neurons=par['dnn_neurons'],\n",
-    "    out_neurons=par['output_neurons']\n",
-    ")   \n",
-    "modelo['logits'] = nn.Linear(par['dnn_neurons'], par['output_neurons'])\n",
-    "modelo['logsoftmax'] = nn.LogSoftmax(dim=-1)    \n",
-    "print(f'Cantidad de parámetros del modelo: {sum(p.numel() for p in modelo.parameters() if p.requires_grad)}')\n"
    ]
   },
   {
@@ -390,61 +351,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ASR(nn.Module):\n",
-    "    def __init__(self, modelo, params):\n",
-    "        super().__init__()\n",
-    "        self.modelo = modelo.to(device)\n",
-    "        self.params = params\n",
-    "        # Prepare iterating variables\n",
-    "        self.avg_train_loss = 0.0\n",
-    "        self.step = 0\n",
-    "        self.optimizer_step = 0\n",
     "\n",
-    "    def update_average(self, loss, avg_loss):\n",
-    "        \"\"\"Update running average of the loss.\n",
-    "\n",
-    "        Arguments\n",
-    "        ---------\n",
-    "        loss : torch.tensor\n",
-    "            detached loss, a single float value.\n",
-    "        avg_loss : float\n",
-    "            current running average.\n",
-    "        Lo que hace es: \n",
-    "        alfa = sum(x)\n",
-    "        avg_old = alfa/(N-1)\n",
-    "        avg_new = (alfa + xi)/N\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        avg_loss : float\n",
-    "            The average loss.\n",
-    "        \"\"\"\n",
-    "        if torch.isfinite(loss):    \n",
-    "            avg_loss -= avg_loss / self.step\n",
-    "            avg_loss += float(loss) / self.step\n",
-    "        return avg_loss\n",
+    "def update_average(loss, avg_loss,step):\n",
+    "    \"\"\"Update running average of the loss.\n",
+    "    Lo que hace es: \n",
+    "    alfa = sum(x)\n",
+    "    avg_old = alfa/(N-1)\n",
+    "    avg_new = (alfa + xi)/N\n",
+    "    \"\"\"\n",
+    "    if torch.isfinite(loss):    \n",
+    "        avg_loss -= avg_loss / step\n",
+    "        avg_loss += float(loss) / step\n",
+    "    return avg_loss\n",
     "\n",
     "\n",
-    "    # Train y valid\n",
-    "    def fit(self, train_set, valid_set, n_epochs):\n",
-    "        optimizer = torch.optim.Adadelta(rho=0.95,lr = params['lr'],eps=1.e-8)\n",
-    "        train_loss = list()\n",
-    "        for i in range(1, n_epochs+1):\n",
-    "            avg_train_loss = 0.0\n",
-    "            # fit de train\n",
-    "            self.ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
-    "                    blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
-    "            self.modelo.train()\n",
-    "            optimizer.zero_grad()\n",
-    "            with tqdm(train_dl,colour=\"yellow\",desc='entrenando') as t:\n",
-    "                for batch in t:\n",
-    "                    loss = self.fit_batch(batch) # <----- implementar esto\n",
-    "                    avg_train_loss = self.update_average(loss, avg_train_loss)\n",
-    "            train_loss.append((i,avg_train_loss))\n",
+    "# Train y valid\n",
+    "def fit(modelo, train_set, valid_set, n_epochs):\n",
+    "    optimizer = torch.optim.Adadelta(rho=0.95,lr = self.params['lr'],eps=1.e-8)\n",
+    "    train_loss = list()\n",
+    "    for i in range(1, n_epochs+1):\n",
+    "        print(f'Procesando epoch {i}/{n_epochs}')\n",
+    "        avg_train_loss = 0.0\n",
+    "        step = 0\n",
+    "        # fit de train\n",
+    "        self.ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
+    "                blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
+    "        modelo.train()\n",
+    "        optimizer.zero_grad()\n",
+    "        with tqdm(train_dl,colour=\"yellow\",desc='entrenando') as t:\n",
+    "            for batch in t:\n",
+    "                (wavs,wavs_l), (phns, phns_l) = batch\n",
+    "                # loss = self.fit_batch(batch)\n",
+    "                feats = self.hparams.compute_features(wavs)\n",
+    "                feats = self.modules.normalize(feats, wavs_l)\n",
+    "                pout, pout_l = modelo(feats)\n",
+    "                loss = self.hparams.compute_cost(pout, phns, wavs_l, phns_l)\n",
+    "                self.ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
+    "                \n",
+    "                avg_train_loss = update_average(loss, avg_train_loss, step)\n",
+    "                t.set_postfix(train_loss=avg_train_loss)\n",
+    "        train_loss.append((i,avg_train_loss))\n",
     "            \n",
     "\n",
     "\n",
-    "        "
+    "        falta el optimizer step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "873fc31e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo = modelo['cnn_rnn_dnn'] = Model_CNN_RNN_DNN_PHN(\n",
+    "    drop_out=par['dropout'],\n",
+    "    n_mels=par['n_mels'],\n",
+    "    cnn_blocks=par['cnn_blocks'],\n",
+    "    cnn_channels=par['cnn_channels'],\n",
+    "    cnn_kernel_size=par['cnn_kernelsize'],\n",
+    "    rnn_blocks=par['rnn_blocks'] ,\n",
+    "    rnn_neurons=par['rnn_neurons'],\n",
+    "    dnn_blocks=par['dnn_blocks'],\n",
+    "    dnn_neurons=par['dnn_neurons'],\n",
+    "    out_neurons=par['output_neurons'])\n",
+    "   \n",
+    "modelo.to(device)\n",
+    "\n",
+    "# Prepare iterating variables\n",
+    "avg_train_loss = 0.0\n",
+    "step = 0\n",
+    "optimizer_step = 0\n"
    ]
   }
  ],
@@ -464,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
